fix description align left

--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,8 @@ body {
   border: none;
   border-radius: 5px;
 }
+.transacdesc {
+  flex-grow: 1;
+  flex-basis: 0;
+  margin-left: 30px;
+}
